<resources>
    <string name="app_name">Karma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menekse">Menekşe</string>
    <string name="aygul">Aygül</string>
    <string name="yasin">Yasin</string>
    <string name="title_activity_menekse">Menekse Activity</string>
    <string name="title_activity_aygul">Aygul Activity</string>
    <string name="title_activity_yasin">Yasin Activity</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yasin_mail">ygurkan@innova.com.tr</string>
    <string name="author">Yasin GÜRKAN</string>
    <string name="ok">Tamam</string>
    <string name="ok_location">Lütfen Konumu Açıp tekrar deneyin</string>
</resources>
