<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menekse"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menekse" />
        <item
            android:id="@+id/nav_aygul"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/aygul" />
        <item
            android:id="@+id/nav_yasin"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/yasin" />
        <!--    <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools" /> -->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
